<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.oj</groupId>
		<artifactId>polinoj</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<packaging>jar</packaging>
	<artifactId>biz-polinoj</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>biz-polinoj</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>1.8</java.version>
	</properties>
	<dependencies>


		<dependency>
			<groupId>com.jlefebure</groupId>
			<artifactId>spring-boot-starter-minio</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>




		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>com.oj</groupId>
			<artifactId>dal-polinoj</artifactId>
		</dependency>

		<dependency>
			<groupId>com.oj</groupId>
			<artifactId>common-polinoj</artifactId>
		</dependency>

		<dependency>
			<groupId>com.oj</groupId>
			<artifactId>sal-polinoj</artifactId>
		</dependency>
	</dependencies>

</project>
